// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Themed test Text match snapshot 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000",
      },
      undefined,
    ]
  }
>
  Snapshot test!
</Text>
`;

exports[`Themed test View match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderColor": "#2f95dc",
      },
      undefined,
    ]
  }
>
  Snapshot test!
</View>
`;
